@@ -141,6 +141,7 @@ version <next>
 - Speex decoding via libspeex
 - Electronic Arts TGQ decoder
 - RV40 decoder
+- QCELP / PureVoice decoder
 
 version 0.4.9-pre1:
 
